--- a/addon/elasticbeanstalk/Procfile
+++ b/addon/elasticbeanstalk/Procfile
@@ -1,1 +1,1 @@
-laitos: ./laitos -conflictfree -gomaxprocs 4 -config config.json -frontend dnsd,healthcheck,httpd,lighthttpd,smtpd,sockd,telegram
+laitos: ./laitos -conflictfree -gomaxprocs 4 -config config.json -frontend dnsd,healthcheck,httpd,insecurehttpd,smtpd,sockd,telegram
