--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ go_import_path: github.com/HouzuoGuo/laitos
 go:
   - 1.8.x
   - tip
+matrix:
+  allow_failures:
+    - go: tip
 os:
   - linux
 script:
