--- a/addon/laitos.service
+++ b/addon/laitos.service
@@ -3,7 +3,7 @@ Description=laitos - personal Internet infrastructure
 After=network.target
 
 [Service]
-ExecStart=/root/laitos/laitos -disableconflicts -tunesystem -gomaxprocs 8 -config config.json -frontend dnsd,healthcheck,httpd,insecurehttpd,plaintext,smtpd,sockd,telegram
+ExecStart=/root/laitos/laitos -disableconflicts -tunesystem -gomaxprocs 8 -config config.json -frontend dnsd,httpd,insecurehttpd,maintenance,plaintext,smtpd,sockd,telegram
 User=root
 Group=root
 WorkingDirectory=/root/laitos
