improve system maintenance with more package and service maintenance tasks; move tune system and swap off operations from main into maintenance

--- a/extra/elasticbeanstalk/Procfile
+++ b/extra/elasticbeanstalk/Procfile
@@ -1,1 +1,1 @@
-laitos: ./laitos -disableconflicts -tunesystem -gomaxprocs 16 -config config.json -daemons dnsd,httpd,insecurehttpd,maintenance,plainsocket,smtpd,sockd,telegram
+laitos: ./laitos -disableconflicts -gomaxprocs 16 -config config.json -daemons dnsd,httpd,insecurehttpd,maintenance,plainsocket,smtpd,sockd,telegram
