sync doc with wiki

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
 *.conf
-contact
 *.crt
-.idea
-init_feature_test.go
-init_toolbox_test.go
-init_mail_test.go
-init_mailcmd_test.go
 *.json
 *.key
+*.swp
+*.zip
+.DS_Store
+.idea
+.vscode
+contact
+debug
+init_feature_test.go
+init_mail_test.go
+init_mailcmd_test.go
+init_toolbox_test.go
 laitos
 nohup.out
 pass
-*.swp
-.vscode
-*.zip
-debug
