--- a/extra/elasticbeanstalk/Procfile
+++ b/extra/elasticbeanstalk/Procfile
@@ -1,1 +1,1 @@
-laitos: ./laitos -disableconflicts -gomaxprocs 16 -config config.json -daemons dnsd,httpd,insecurehttpd,maintenance,plainsocket,smtpd,snmpd,sockd,telegram
+laitos: ./laitos -disableconflicts -gomaxprocs 16 -config config.json -daemons dnsd,httpd,insecurehttpd,maintenance,plainsocket,simpleipsvcd,smtpd,snmpd,sockd,telegram
