improve sockd test case to knock on all configured tcp an dudp ports and check response; run go vet in circleci.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,6 @@ jobs:
     parallelism: 2
     steps:
       - checkout
-      - run: go test -v -cover ./...
       - run: go build
+      - run: go vet ./...
+      - run: go test -v -cover ./...
