--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,4 @@ jobs:
       - checkout
       - run: go build
       - run: go vet ./...
-      - run: sudo -E go test -v -cover ./...
+      - run: go test -v -cover ./...
