--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.14
-    working_directory: /go/src/github.com/HouzuoGuo/laitos
+      - image: cimg/go:1.15
     parallelism: 1
     steps:
       - checkout
