Introduce network-bound file encryption (decryption) service - a network server and corresponding client that allow a user of an online laitos program instance to send config/data file decryption password to another laitos program instance that is about to start.

--- a/extra/elasticbeanstalk/Procfile
+++ b/extra/elasticbeanstalk/Procfile
@@ -1,1 +1,1 @@
-laitos: ./laitos -disableconflicts -gomaxprocs 16 -config config.json -daemons autounlock,dnsd,httpd,insecurehttpd,maintenance,plainsocket,serialport,simpleipsvcd,smtpd,snmpd,sockd,telegram
+laitos: ./laitos -awsinteg -prominteg -disableconflicts -gomaxprocs 16 -config config.json -daemons autounlock,dnsd,httpd,insecurehttpd,maintenance,passwdrpc,phonehome,plainsocket,serialport,simpleipsvcd,smtpd,snmpd,sockd,telegram
