--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,20 @@
 .copilot
 .idea
 .vscode
+2fa
 contact
 debug
+gcp_appengine_data/
 init_feature_test.go
 init_mail_test.go
 init_mailcmd_test.go
 init_toolbox_test.go
 laitos
+laitos.amd64
+laitos.arm32
+laitos.arm64
+laitos.darwin
 laitos.exe
 nohup.out
 pass
 tags
-gcp_appengine_data/
