--- a/app.yaml
+++ b/app.yaml
@@ -2,3 +2,5 @@ runtime: go115
 includes:
   - gcp_appengine_data/appeng-environment.yaml
 instance_class: f1
+automatic_scaling:
+  max_instances: 1
