fix missing index handler in gcp_appengine_data.example

--- a/gcp_appengine_data.example/config.json.example
+++ b/gcp_appengine_data.example/config.json.example
@@ -15,6 +15,13 @@
   },
   "HTTPHandlers": {
     "CommandFormEndpoint": "/cmd",
+    "IndexEndpointConfig": {
+      "HTMLFilePath": "index.html"
+    },
+    "IndexEndpoints": [
+      "/",
+      "/index.html"
+    ],
     "InformationEndpoint": "/info",
     "RequestInspectorEndpoint": "/myrequest",
     "WebProxyEndpoint": "/proxy"
