Rename web service configuration property LatestRequestsInspector into LatestRequestsInspectorEndpoint to be consistent with other endpoint property names.
Add more web services to the example config files.

--- a/gcp_appengine_data.example/config.json.example
+++ b/gcp_appengine_data.example/config.json.example
@@ -15,6 +15,7 @@
   },
   "HTTPHandlers": {
     "CommandFormEndpoint": "/cmd",
+    "FileUploadEndpoint": "/upload",
     "IndexEndpointConfig": {
       "HTMLFilePath": "index.html"
     },
@@ -23,6 +24,8 @@
       "/index.html"
     ],
     "InformationEndpoint": "/info",
+    "LatestRequestsInspectorEndpoint": "/latest_requests",
+    "ProcessExplorerEndpoint": "/proc",
     "RequestInspectorEndpoint": "/myrequest",
     "WebProxyEndpoint": "/proxy"
   }
