Use one more technique to prevent app engine from scaling the app beyond a single instance.

--- a/app.yaml
+++ b/app.yaml
@@ -3,4 +3,8 @@ includes:
   - gcp_appengine_data/appeng-environment.yaml
 instance_class: f1
 automatic_scaling:
+  min_idle_instances: automatic
+  max_idle_instances: 1
+  min_pending_latency: automatic
+  max_pending_latency: 0.030s
   max_instances: 1
