--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,11 @@ version: 2
 jobs:
   build:
     docker:
-      - image: cimg/go:1.21
+      - image: cimg/go:1.22
     parallelism: 1
     steps:
       - checkout
       - run: env CGO_ENABLED=0 go vet ./...
       - run: make all
       - run: make clean
-      - run: env CGO_ENABLED=0 go test -count=1 -v -cover ./...
+      - run: env CGO_ENABLED=0 go test -count=1 -v ./...
