circleci: increase test timeout to 20m

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,4 @@ jobs:
       - run: env CGO_ENABLED=0 go vet ./...
       - run: make all
       - run: make clean
-      - run: env CGO_ENABLED=0 go test -count=1 -p 1 -v ./...
+      - run: env CGO_ENABLED=0 go test -count=1 -timeout 20m -p 1 -v ./...
